[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/cervezaVacia.png" type="Texture" id=1]
[ext_resource path="res://World/alcoholVacio.png" type="Texture" id=2]
[ext_resource path="res://World/cigarroVacio.png" type="Texture" id=3]
[ext_resource path="res://World/cocaVacia.png" type="Texture" id=4]
[ext_resource path="res://World/cervezaLlena.png" type="Texture" id=5]
[ext_resource path="res://World/cigarroLleno.png" type="Texture" id=6]
[ext_resource path="res://World/alcoholLleno.png" type="Texture" id=7]
[ext_resource path="res://World/cocaLlena.png" type="Texture" id=8]
[ext_resource path="res://items.gd" type="Script" id=9]

[node name="items" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 8, 0 )
scale = Vector2( 0.33871, 0.207407 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 54, 15.125 )
scale = Vector2( 0.65625, 0.76282 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 90, 14.5 )
scale = Vector2( 0.615385, 0.81579 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 125, 12.5625 )
scale = Vector2( 0.483871, 0.526961 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 1, 2 )
scale = Vector2( 0.424597, 0.259259 )
texture = ExtResource( 7 )
centered = false

[node name="Sprite6" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 24, -2 )
scale = Vector2( 0.9375, 0.948718 )
texture = ExtResource( 5 )
centered = false

[node name="Sprite7" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 73, 1 )
scale = Vector2( 0.673077, 0.894737 )
texture = ExtResource( 6 )
centered = false

[node name="Sprite8" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 108, 1 )
scale = Vector2( 0.596774, 0.627451 )
texture = ExtResource( 8 )
centered = false
[connection signal="visibility_changed" from="CanvasLayer/Sprite8" to="." method="_on_Sprite8_visibility_changed"]
